# v5Craft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pcbuild.sh  project.pros  recompile-render.bat
include/: main.h
include/FastPix3D/: Color.h  Convert.h  CullMode.h  Device.h  Directory.h  Drawer.h  FPSCounter.h  FastPix3D.h  File.h  Font.h  FreelookManager.h  Graphics.h  Input.h  Light.h  LightType.h  MathUtility.h  Matrix.h  Mesh.h  MouseButton.h  Path.h  Point.h  ProcessedVertex.h  RenderStates.h  SeekOrigin.h  ShadowTriangle.h  ShadowVolume.h  Subset.h  Texture.h  Triangle.h  Vector2f.h  Vector3f.h  Vertex.h
include/Vex-Minecraft/: ChunkBuilder.h  Player.h  Skybox.h  TextureSheet.h  block.h  chunk.h  conf.h  cube.h  cubePosition.h  ray.h
src/: main.cpp
src/Vex-Minecraft/: ChunkBuilder.cpp  Player.cpp  Ray.cpp  Skybox.cpp  TextureSheet.cpp  block.cpp  chunk.cpp  cube.cpp  cubePosition.cpp
